# TakeLang

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  main.tl
src/: taker.cpp  taker.hpp  tools.hpp
